fix: hiding the navlist on mobile

--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -48,11 +48,11 @@ bolt-navbar {
   @include bolt-margin(0 0 0 small);
 
   // TODO: [Mai] The following is a hack to hide the nav on small screens, there should be a better option to hide and show in the future from the design team.
-  /*display: none;
+  display: none;
 
   @include respond-to(medium) {
     display: block;
-  }*/
+  }
 }
 
 .c-bolt-navbar__title {
